chapter django 5 finished

--- a/tutorial5/templates/base/home.html
+++ b/tutorial5/templates/base/home.html
@@ -3,6 +3,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
+    <!--add link to app home page-->
+    <a href="{% url 'userApp:index' %}"><h1>Go to userApp</h1></a>
   </head>
   <body>
     <h1>Hello World</h1>
